test/zinc_source/compile_errors/callables/21_arrow_lambda_default_param.zn
// expected-error: arrow lambda parameters cannot have defaults
fn main() {
    f = (x = 1) -> x
}
